# textpoint

./: .gitignore  CMakeLists.txt  Presenter.cpp  Renderer.cpp  Slide.cpp  TextPoint.cpp  TitleSlide.cpp  TitleSlideRenderer.cpp
include/: Presenter.h  Renderer.h  Slide.h  TitleSlide.h  TitleSlideRenderer.h
